--- a/VideoStore/VideoStore.csproj
+++ b/VideoStore/VideoStore.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Rental.cs" />
+    <Compile Include="Rentals.cs" />
+    <Compile Include="VideoStore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
