--- a/VideoStoreTests/VideoStoreTests.csproj
+++ b/VideoStoreTests/VideoStoreTests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RentalsTests.cs" />
+    <Compile Include="VideoStoreTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
