--- a/VideoStore/VideoStore.csproj
+++ b/VideoStore/VideoStore.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Rental.cs" />
     <Compile Include="Rentals.cs" />
+    <Compile Include="Exceptions\SocialSecurityNumberFormatException.cs" />
     <Compile Include="VideoStore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
