--- a/VideoStore/VideoStore.csproj
+++ b/VideoStore/VideoStore.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Enums.cs" />
     <Compile Include="Exceptions\CustomerException.cs" />
+    <Compile Include="Exceptions\MovieException.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Interfaces\IRentals.cs" />
     <Compile Include="Interfaces\IVideoStore.cs" />
